1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ

--- a/1987072601.html
+++ b/1987072601.html
@@ -34,11 +34,11 @@
 <body>
 	<div class="date-location">
 		<div class="date-container">
-		    <div class="box top-left-box">No.: </div>
-		    <div class="box top-middle-box ">Location: </div>
+		    <div class="box top-left-box">No.: 6</div>
+		    <div class="box top-middle-box ">Location: 和歌山県白浜町 円月島</div>
 		    <div class="box">Condition: </div>
-		    <div class="box bottom-left-box">Date: </div>
-		    <div class="box bottom-middle-box">Activity: </div>
+		    <div class="box bottom-left-box">Date:<br />1987/07/26 (Sun)</div>
+		    <div class="box bottom-middle-box">Activity:<br />NAUI OPENWATER 1 Last Check Dive</div>
 		</div>
 	</div>
 	<div class="data1">
@@ -63,7 +63,7 @@
 		<div class="box temp-title">End</div>
 		<div class="box temp-title">Btm.</div>
 		<div class="box temp-title">Total</div>
-		<div class="box">&nbsp;</div>
+		<div class="box textcenter">海恋 (AREN)</div>
 
 		<div class="box temp-data">&nbsp;</div>
 		<div class="box temp-data">&nbsp;</div>
@@ -71,15 +71,15 @@
 		<div class="box temp-data">&nbsp;</div>
 		<div class="box temp-data">&nbsp;</div>
 		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">  :  </div>
-		<div class="box temp-data">  :  </div>
-		<div class="box temp-data">  :  </div>
-		<div class="box temp-data">  :  </div>
-		<div class="box">&nbsp;</div>
+		<div class="box temp-data">150</div>
+		<div class="box temp-data">70</div>
+		<div class="box temp-data">8</div>
+		<div class="box temp-data">9</div>
+		<div class="box temp-data">14:45</div>
+		<div class="box temp-data">15:21</div>
+		<div class="box temp-data">00:31</div>
+		<div class="box temp-data">00:31</div>
+		<div class="box textcenter">#8719 N. Okamoto</div>
 
 		<div class="box temp-unit">℃</div>
 		<div class="box temp-unit">℃</div>
@@ -142,7 +142,7 @@
 			<div class="arrow-line horizontal"></div>
 		</div>
 		<div class="log-box">
-			<p class="d">D　　　　　</p>
+			<p class="d">D 　00:30　　　</p>
 		</div>
 		<div class="log-box">
 			<table class="stop">
@@ -152,12 +152,12 @@
 					<td></td>
 				</tr>
 				<tr>
-					<td>RNT </td>
+					<td>ANT </td>
 					<td></td>
 				</tr>
 				<tr>
 					<td>ADT </td>
-					<td></td>
+					<td>00:30</td>
 				</tr>
 				<tr>
 					<td>TNT </td>
@@ -188,7 +188,7 @@
 				<th></th>
 			</tr>
 			<tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+				<td class="textleft trance">児島</td> <td></td> <td>male</td> <td></td> <td></td> <td class="textleft"></td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
@@ -204,6 +204,15 @@
 	</div>
 	<div id="notes">
 		<p><b>Notes:</b></p>
+		<p>ビーチダイブ。</p>
+		<p>チェックダイブ兼最初のファンダイブ。この日のバディがダイビング人生初のバディ。このショップを離れるまで長いお付き合いに。お名前は流石にシークレット。お店でどつき漫才をするくらいには仲良くなった。どつかれ役は自慢じゃないが、ボケ役のぼくだ。</p>
+		<p>グラスボートの航路に入らないように、インストラクターの岡本さんが、あらかじめ現地サービスでアドバイスを受けていて、ぼくらは彼の後ろにくっついて潜る。</p>
+		<p>円月島のどのあたりか記憶していないけど、海底近くから円月島を見上げて、たくさんの小さな魚のシルエットを眺めながら泳いでた。バディ氏が海底ばかり見てるので、ときどき「上、見れ、上、きれい」とか、ときどきハンドサイン出しながら泳いでた。</p>
+		<p>スタッフの比率は 1:2。今から考えると採算って何？って状態。タンクは全部大阪の店舗から全日程、人数分持って行ってるので、現地費用は高速代、燃料費、宿泊費、サービス利用料、食費くらいか。なんとかなってたのかな？でも店の維持費とか人件費とかタンクだって維持管理費は必要なわけで。作業でカバーしてたのかな？</p>
 	</div>
+	<footer>
+		<hr />
+		<p><a href="index.html">もどる</a></p>
+	</footer>
 </body>
 </html>
