--- a/index.html
+++ b/index.html
@@ -58,7 +58,39 @@
 			<p><a href="https://orzbruford.github.io/orzbruford/" target="_blank">プロフィールページ</a>があるのでご参照ください。</p>
 		</div>
 		<div class="clear"></div>
+
 		<h2>わたしのダイビングログ</h2>
+		<dl class="loglist">
+		<dt>1987</dt>
+		<dd>
+			<ul>
+			<li>1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (1)</li>
+			<li>1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (2)</li>
+			<li>1987/07/12 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (3)</li>
+			<li>1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (4)</li>
+			<li>1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (5)</li>
+			<li><a href="1987072601.html">1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ</a></li>
+			</ul>
+		</dd>
+		<dt>1988</dt>
+		<dt>1989</dt>
+		<dt>1990</dt>
+		<dt>1991</dt>
+		<dt>1992</dt>
+		<dt>1993</dt>
+		<dt>1994</dt>
+		<dt>1995</dt>
+		<dt>1996</dt>
+		<dt>1997</dt>
+		<dt>1998</dt>
+		<dt>1999</dt>
+		<dt>2000</dt>
+		<dt>2001</dt>
+		<dt>2002</dt>
+		<dt>2003</dt>
+		<dt>2004</dt>
+		</dl>
+
 	</div>
 
 	<ul class="nomark">
