--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	-->
 
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<script defer src="index.js" defer></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/@nikolat/makibishi@0.2.0"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/nostr-zap@1.3.0"></script>
 	<style>
@@ -64,12 +65,12 @@
 		<dt>1987</dt>
 		<dd>
 			<ul>
-			<li>1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (1)</li>
-			<li>1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (2)</li>
-			<li>1987/07/12 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (3)</li>
-			<li>1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (4)</li>
-			<li>1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (5)</li>
-			<li><a href="1987072601.html">1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ</a></li>
+			<li>#1 1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (1)</li>
+			<li>#2 1987/07/11 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (2)</li>
+			<li>#3 1987/07/12 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (3)</li>
+			<li>#4 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (4)</li>
+			<li>#5 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (5)</li>
+			<li><a href="1987072601.html">#6 1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ</a></li>
 			</ul>
 		</dd>
 		<dt>1988</dt>
