--- a/1987072601.html
+++ b/1987072601.html
@@ -44,7 +44,7 @@
 	<div class="data1">
 		<div class="box temp">Temperature</div> <!-- 3 -->
 		<div class="box vis">Visibility</div> <!-- 3 -->
-		<div class="box bar">Bar.</div> <!-- 2 -->
+		<div class="box bar">Bar.</div> <!-- 3 -->
 		<div class="box depth">Depth</div> <!-- 2 -->
 		<div class="box time">Time</div> <!-- 4 -->
 		<div class="box sign">Instructor (or Dive Leader) Signature:</div>
@@ -55,8 +55,10 @@
 		<div class="box temp-title">↑</div>
 		<div class="box temp-title">↓</div>
 		<div class="box temp-title">↔</div>
+		<div class="box temp-title">Tank</div>
 		<div class="box temp-title">Start</div>
 		<div class="box temp-title">End</div>
+		<div class="box temp-title">SAC</div>
 		<div class="box temp-title">Ave.</div>
 		<div class="box temp-title">Max.</div>
 		<div class="box temp-title">Start</div>
@@ -71,8 +73,10 @@
 		<div class="box temp-data">&nbsp;</div>
 		<div class="box temp-data">&nbsp;</div>
 		<div class="box temp-data">&nbsp;</div>
+		<div class="box temp-data">14</div>
 		<div class="box temp-data">150</div>
 		<div class="box temp-data">70</div>
+		<div class="box temp-data">17.28</div>
 		<div class="box temp-data">8</div>
 		<div class="box temp-data">9</div>
 		<div class="box temp-data">14:45</div>
@@ -87,8 +91,10 @@
 		<div class="box temp-unit">m</div>
 		<div class="box temp-unit">m</div>
 		<div class="box temp-unit">m</div>
+		<div class="box temp-unit">&#x2113;</div>
 		<div class="box temp-unit">bar</div>
 		<div class="box temp-unit">bar</div>
+		<div class="box temp-unit">&#x2113;/(bar<min>x</min>min)</div>
 		<div class="box temp-unit">m</div>
 		<div class="box temp-unit">m</div>
 		<div class="box temp-unit">&nbsp;</div>
