1993 のログを 2 件追加

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
 		<dt>1991</dt>
 		<dt>1992</dt>
 		<dt>1993</dt>
+		<dd>
+			<ul>
+			<li><a href="1993082901.html">#49 1993/08/29 和歌山県古座町 上瀬沖の根</a></li>
+			<li><a href="1993082902.html">#50 1993/08/29 和歌山県白浜町 上瀬内の根</a></li>
+			</ul>
+		</dd>
 		<dt>1994</dt>
 		<dt>1995</dt>
 		<dt>1996</dt>
