双島沖 1 の根、塔の沖、発見、開発、調査エピソードを追加。SAC calcuratorを追加

--- a/1993082901.html
+++ b/1993082901.html
@@ -6,18 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="canonical" href="URL">
+	<link rel="canonical" href="https://mitsugu.github.io/divinglogbook/1993082901.html">
 
 	<meta name="title" content="ダイビング・ログブック">
-	<meta name="description" content="">
+	<meta name="description" content="No. 49 和歌山県古座町 上瀬沖の根">
 	<meta name="keywords" content="Logbook, Scuba Diving, Scuba, Diving">
 
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="ダイビング・ログブック">
-	<meta property="og:description" content="ダイビング・ログ">
-	<meta property="og:url" content="URL">
+	<meta property="og:description" content="No. 49 和歌山県古座町 上瀬沖の根">
+	<meta property="og:url" content="https://mitsugu.github.io/divinglogbook/1993082901.html">
 	<meta property="og:site_name" content="ダイビング・ログブック">
-	<meta property="og:html" content="URL">
+	<meta property="og:html" content="https://mitsugu.github.io/divinglogbook/1993082901.html">
 	<!--
 	<meta property="og:image" content="https://i.imgur.com/jyZiVCY.jpg">
 	<meta property="og:image:width" content="340">
@@ -25,7 +25,7 @@
 	-->
 
 	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="URL">
+	<meta name="twitter:site" content="https://mitsugu.github.io/divinglogbook/1993082901.html">
 
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script defer src="https://cdn.jsdelivr.net/npm/@nikolat/makibishi@0.2.0"></script>
