--- a/1994062602.html
+++ b/1994062602.html
@@ -6,18 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="canonical" href="https://mitsugu.github.io/divinglogbook/1993082902.html">
+	<link rel="canonical" href="https://mitsugu.github.io/divinglogbook/1994062602.html">
 
 	<meta name="title" content="ダイビング・ログブック">
-	<meta name="description" content="No. 50 和歌山県古座町 上瀬内の根">
+	<meta name="description" content="No. 72 和歌山県串本町 塔の沖">
 	<meta name="keywords" content="Logbook, Scuba Diving, Scuba, Diving">
 
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="ダイビング・ログブック">
-	<meta property="og:description" content="No. 50 和歌山県古座町 上瀬内の根">
-	<meta property="og:url" content="https://mitsugu.github.io/divinglogbook/1993082902.html">
-	<meta property="og:site_name" content="No. 50 和歌山県古座町 上瀬内の根">
-	<meta property="og:html" content="https://mitsugu.github.io/divinglogbook/1993082902.html">
+	<meta property="og:description" content="No. 72 和歌山県串本町 塔の沖">
+	<meta property="og:url" content="https://mitsugu.github.io/divinglogbook/1994062602.html">
+	<meta property="og:site_name" content="ダイビング・ログブック">
+	<meta property="og:html" content="https://mitsugu.github.io/divinglogbook/1994062602.html">
 	<!--
 	<meta property="og:image" content="https://i.imgur.com/jyZiVCY.jpg">
 	<meta property="og:image:width" content="340">
@@ -25,21 +25,21 @@
 	-->
 
 	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="https://mitsugu.github.io/divinglogbook/1993082902.html">
+	<meta name="twitter:site" content="https://mitsugu.github.io/divinglogbook/1994062602.html">
 
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script defer src="https://cdn.jsdelivr.net/npm/@nikolat/makibishi@0.2.0"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/nostr-zap@1.3.0"></script>
-	<script defer src="index.js"></script>
 </head>
 <body>
 	<div class="date-location">
 		<div class="date-container">
-		    <div class="box top-left-box">No.: 50</div>
-		    <div class="box top-middle-box ">Location: 和歌山県古座町 上瀬内の根</div>
-		    <div class="box">Condition: </div>
-		    <div class="box bottom-left-box">Date:<br />1993/08/29 (Sun)</div>
-		    <div class="box bottom-middle-box">Activity:<br />Fun Dive</div>
+		    <div class="box top-left-box">No.: 72</div>
+		    <div class="box top-middle-box ">Location: 和歌山県串本町 塔の沖</div>
+		    <div class="box">Condition: <br />　海況: おだやか</div>
+		    <div class="box bottom-left-box">Date:<br />1994/06/26 (Sun)</div>
+		    <div class="box bottom-middle-box">Activity:<br />新ダイビング・ポイント調査<br />NAUI AI コース<br />NAUI OPEN WATER II &amp; ファンダイブ・アシスト</div>
+			<div class="box">　波: 0m<br />　流れ: ほぼ無し</div>
 		</div>
 	</div>
 	<div class="data1">
@@ -66,23 +66,23 @@
 		<div class="box temp-title">End</div>
 		<div class="box temp-title">Btm.</div>
 		<div class="box temp-title">Total</div>
-		<div class="box textcenter">Diving Spot Toriton</div>
+		<div class="box textcenter">Diving Spot Triton</div>
 
+		<div class="box temp-data">30</div>
+		<div class="box temp-data">&nbsp;</div>
+		<div class="box temp-data">27</div>
 		<div class="box temp-data">&nbsp;</div>
 		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">12</div>
-		<div class="box temp-data">200</div>
-		<div class="box temp-data">75</div>
-		<div class="box temp-data">16.48</div>
-		<div class="box temp-data">16</div>
-		<div class="box temp-data">20</div>
-		<div class="box temp-data">14:30</div>
-		<div class="box temp-data">15:05</div>
-		<div class="box temp-data">00:35</div>
+		<div class="box temp-data">18</div>
+		<div class="box temp-data">10</div>
+		<div class="box temp-data">190</div>
+		<div class="box temp-data">100</div>
+		<div class="box temp-data">14.12</div>
+		<div class="box temp-data">7.7</div>
+		<div class="box temp-data">18.9</div>
+		<div class="box temp-data">12:19</div>
+		<div class="box temp-data">12:55</div>
+		<div class="box temp-data">00:36</div>
 		<div class="box temp-data">  :  </div>
 		<div class="box textcenter">#9943 Mitsuru Sakanashi</div>
 
@@ -138,8 +138,8 @@
 			<p class="sit">　　：　　</p>
 			<div class="arrow-line horizontal"></div>
 		</div>
-		<div class="log-box memo-box">
-			<p>Multi-level diving<br />(Used Diving Computer)</p>
+		<div class="log-box">
+			<p>Used Diving Computer</p>
 		</div>
 		<div class="pd-box">
 			<p class="pd">PD　　　　　</p>
@@ -197,7 +197,7 @@
 				<th></th>
 			</tr>
 			<tr>
-				<td class="textleft trance"></td> <td></td> <td>female</td> <td></td> <td></td> <td class="textleft">1 本目と同じ人。</td> </tr>
+				<td class="textleft"></td> <td></td> <td></td> <td></td> <td></td> <td class="textleft">当時の常連さんたち。どなたが参加されていたかは失念。</td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
@@ -213,12 +213,15 @@
 	</div>
 	<div id="notes">
 		<p><b>Notes:</b></p>
-		<p>ボートダイブ。</p>
-		<p>おもしろいダイビング・ポイントに入ったはずなんだけど、やっぱりポイントの記憶がまったくない。記憶にあるのは……やっぱり言えない。</p>
-		<p class="remove">エグジットしてボートが港に帰ってから、バディにホースで水をかけられる。この方、たしかお仕事が看護師さんで、ぼくがスタッフになってから一度だけ来店されたことがある。お名前は失念。ログも残ってないので、なんという方だったのかわからない。</p>
-		<p>やっぱりポイントのことを、ぜんぜん覚えてなくて笑う。どんだけ他のことに気を取られていたのか。我ながらあきれる。</p>
+		<p>船長が漁の帰りに発見した隠れ根。仮の名前として塔の沖と命名される。命名の由来は根の上の海上から串本のゴミ焼却場の煙突が見えていたことから。</p>
+		<p>焼却場沖とかではあんまりなので、煙突を塔とみなして塔の沖と暫定的に命名。その後ぼんてん倶楽部 (現串本ダイビング事業組合) でササの根 (双島沖 1 の根) 同様、新ポイントを共有。ぼんてん倶楽部でポイント名として塔の沖がそのまま正式に採用される。</p>
+		<p>ササの根 (双島沖 1 の根) のときは、ポイント名に発見者 2 人の名前が入っていて、やはり対外的なわかりやすさに欠けるとのことで、双島の沖の隠れ根であることから、双島沖 1 の根となったが、今回は他に適切な名前がなく、そのまま塔の沖となった。</p>
+		<p>師匠を含め、スタッフ全員が、初めて入ることになる。もちろん、このポイントも、このとき初めて人が入ることになる。</p>
+		<p>やはり魚影が濃いし、地形もそこそこおもしろい。しかもササの根 (双島沖 1 の根) と比較すると、水深も浅めで、ササの根のような見た目の厳つさもないので (ぼくは山好きでもあるので、ササの根のあの見た目の厳つさが好きなんだけれど)、OW II のゲストも案内しやすい。</p>
+		<p>この日、一緒に入ったゲストにも好評だった。いわゆる「使える」ポイントだという判断になった。</p>
+		<p>ササの根 (双島沖 1 の根) のときは、興奮していたのか、エアの消費量がやや多めだったが、こちらはマイペースを維持できたのか、空気消費量はいつもとさほど変わらない。</p>
 	</div>
-	<footer class="clear">
+	<footer>
 		<hr />
 		<p><a href="index.html">もどる</a></p>
 	</footer>
