--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
 			</ul>
 		</dd>
 		<dt>1994</dt>
+		<dd>
+			<ul>
+			<li><a href="1994062601.html">#71 1994/08/29 和歌山県串本町 双島沖 1 の根</a></li>
+			<li><a href="1994062602.html">#72 1994/08/29 和歌山県串本町 塔の沖</a></li>
+			</ul>
+		</dd>
 		<dt>1995</dt>
 		<dt>1996</dt>
 		<dt>1997</dt>
