--- a/1994062601.html
+++ b/1994062601.html
@@ -6,18 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="canonical" href="https://mitsugu.github.io/divinglogbook/1993082902.html">
+	<link rel="canonical" href="https://mitsugu.github.io/divinglogbook/1994062601.html">
 
 	<meta name="title" content="ダイビング・ログブック">
-	<meta name="description" content="No. 50 和歌山県古座町 上瀬内の根">
+	<meta name="description" content="No. 71 和歌山県串本町 双島沖 1 の根">
 	<meta name="keywords" content="Logbook, Scuba Diving, Scuba, Diving">
 
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="ダイビング・ログブック">
-	<meta property="og:description" content="No. 50 和歌山県古座町 上瀬内の根">
-	<meta property="og:url" content="https://mitsugu.github.io/divinglogbook/1993082902.html">
-	<meta property="og:site_name" content="No. 50 和歌山県古座町 上瀬内の根">
-	<meta property="og:html" content="https://mitsugu.github.io/divinglogbook/1993082902.html">
+	<meta property="og:description" content="No. 71 和歌山県串本町 双島沖 1 の根">
+	<meta property="og:url" content="https://mitsugu.github.io/divinglogbook/1994062601.html">
+	<meta property="og:site_name" content="ダイビング・ログブック">
+	<meta property="og:html" content="https://mitsugu.github.io/divinglogbook/1994062601.html">
 	<!--
 	<meta property="og:image" content="https://i.imgur.com/jyZiVCY.jpg">
 	<meta property="og:image:width" content="340">
@@ -25,21 +25,21 @@
 	-->
 
 	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="https://mitsugu.github.io/divinglogbook/1993082902.html">
+	<meta name="twitter:site" content="https://mitsugu.github.io/divinglogbook/1994062601.html">
 
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<script defer src="https://cdn.jsdelivr.net/npm/@nikolat/makibishi@0.2.0"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/nostr-zap@1.3.0"></script>
-	<script defer src="index.js"></script>
 </head>
 <body>
 	<div class="date-location">
 		<div class="date-container">
-		    <div class="box top-left-box">No.: 50</div>
-		    <div class="box top-middle-box ">Location: 和歌山県古座町 上瀬内の根</div>
-		    <div class="box">Condition: </div>
-		    <div class="box bottom-left-box">Date:<br />1993/08/29 (Sun)</div>
-		    <div class="box bottom-middle-box">Activity:<br />Fun Dive</div>
+		    <div class="box top-left-box">No.: 71</div>
+		    <div class="box top-middle-box ">Location: 和歌山県串本町 双島沖 ササの根 (双島沖 1 の根)</div>
+		    <div class="box">Condition: <br />　海況: おだやか</div>
+		    <div class="box bottom-left-box">Date:<br />1994/06/26 (Sun)</div>
+		    <div class="box bottom-middle-box">Activity:<br />新ダイビング・ポイント調査<br />NAUI AI コース<br />NAUI OPEN WATER II &amp; ファンダイブ・アシスト</div>
+			<div class="box">　波: 0m<br />　流れ: ほぼ無し</div>
 		</div>
 	</div>
 	<div class="data1">
@@ -66,23 +66,23 @@
 		<div class="box temp-title">End</div>
 		<div class="box temp-title">Btm.</div>
 		<div class="box temp-title">Total</div>
-		<div class="box textcenter">Diving Spot Toriton</div>
+		<div class="box textcenter">Diving Spot Triton</div>
 
+		<div class="box temp-data">30</div>
+		<div class="box temp-data">&nbsp;</div>
+		<div class="box temp-data">27</div>
 		<div class="box temp-data">&nbsp;</div>
 		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">&nbsp;</div>
-		<div class="box temp-data">12</div>
-		<div class="box temp-data">200</div>
-		<div class="box temp-data">75</div>
-		<div class="box temp-data">16.48</div>
-		<div class="box temp-data">16</div>
-		<div class="box temp-data">20</div>
-		<div class="box temp-data">14:30</div>
-		<div class="box temp-data">15:05</div>
-		<div class="box temp-data">00:35</div>
+		<div class="box temp-data">18</div>
+		<div class="box temp-data">10</div>
+		<div class="box temp-data">190</div>
+		<div class="box temp-data">90</div>
+		<div class="box temp-data">16.03</div>
+		<div class="box temp-data">16.0</div>
+		<div class="box temp-data">23.7</div>
+		<div class="box temp-data">10:03</div>
+		<div class="box temp-data">10:27</div>
+		<div class="box temp-data">00:24</div>
 		<div class="box temp-data">  :  </div>
 		<div class="box textcenter">#9943 Mitsuru Sakanashi</div>
 
@@ -138,8 +138,8 @@
 			<p class="sit">　　：　　</p>
 			<div class="arrow-line horizontal"></div>
 		</div>
-		<div class="log-box memo-box">
-			<p>Multi-level diving<br />(Used Diving Computer)</p>
+		<div class="log-box">
+			<p>Used Diving Computer</p>
 		</div>
 		<div class="pd-box">
 			<p class="pd">PD　　　　　</p>
@@ -197,7 +197,7 @@
 				<th></th>
 			</tr>
 			<tr>
-				<td class="textleft trance"></td> <td></td> <td>female</td> <td></td> <td></td> <td class="textleft">1 本目と同じ人。</td> </tr>
+				<td class="textleft"></td> <td></td> <td></td> <td></td> <td></td> <td class="textleft">当時の常連さんたち。どなたが参加されていたかは失念。</td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
@@ -214,11 +214,14 @@
 	<div id="notes">
 		<p><b>Notes:</b></p>
 		<p>ボートダイブ。</p>
-		<p>おもしろいダイビング・ポイントに入ったはずなんだけど、やっぱりポイントの記憶がまったくない。記憶にあるのは……やっぱり言えない。</p>
-		<p class="remove">エグジットしてボートが港に帰ってから、バディにホースで水をかけられる。この方、たしかお仕事が看護師さんで、ぼくがスタッフになってから一度だけ来店されたことがある。お名前は失念。ログも残ってないので、なんという方だったのかわからない。</p>
-		<p>やっぱりポイントのことを、ぜんぜん覚えてなくて笑う。どんだけ他のことに気を取られていたのか。我ながらあきれる。</p>
+		<p>この日は後に双島沖 1 の根と呼ばれることになる新ポイントと、後に塔の沖と呼ばれることになる新ポイントの開発、調査に入る。</p>
+		<p>ササの根 (双島沖 1 の根) は、いつもお世話になっている船長と師匠が浅地からの帰りに発見した隠れ根。師匠が入って根の存在を確認。仮の名前として発見した 2 人の名を採ってササの根と暫定命名される。ササの根 (双島沖 1 の根) に人が入るのは、このときが初めてとなる。</p>
+		<p>その後、師匠は、ぼんてん倶楽部 (現串本ダイビング事業組合) で新ポイントを共有。ぼんてん倶楽部で新ポイント名として、より対外的にわかりやすい、双島沖 1 の根と命名される。</p>
+		<p>ぼくがササの根に初めて入るのが、このときになる。師匠は 2 度目。師匠も 1 度目はさらっと眺めただけなので (ダイビングの帰りだったので)、本格的なポイント調査は、このときが初めてとなる。AI Candidate だった準スタッフのぼくを含めて、全スタッフが入るのは、この日が初めて。</p>
+		<p>エントリーしてすぐ見えたのが北アルプスの岩稜のような風景。おぉ、っとレギュを咥えたまま声がでた。魚影も濃かった。このときは OPEN WATER II とファンのお客さんも一緒に入っている。一緒に入ったゲストの評判も好評だった。</p>
+		<p>ただ後日、この双島沖 1 の根に入った、アドバンス受講生のゲストにちょっとしたトラブルが起きることになる。だけれども、そのことは、またその日のログに書こうと思う。安全に関わるようなものではないので、公開しても問題ないと思う。思い出すと今でも申し訳無さで胸がキュッとなってしまう出来事だった。</p>
 	</div>
-	<footer class="clear">
+	<footer>
 		<hr />
 		<p><a href="index.html">もどる</a></p>
 	</footer>
