table 要素にえらい間違いがあったので。
やっぱり htmllint にかけないとあかんわ。

--- a/1987072601.html
+++ b/1987072601.html
@@ -193,18 +193,17 @@
 				<th>End</th>
 				<th></th>
 			</tr>
-			<tr>
-				<td class="textleft trance">児島</td> <td></td> <td>male</td> <td></td> <td></td> <td class="textleft"></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td class="textleft trance">児玉</td> <td></td> <td>male</td> <td></td> <td></td> <td class="textleft"></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 		</tbody>
 		</table>
 	</div>
