--- a/1993082902.html
+++ b/1993082902.html
@@ -196,18 +196,17 @@
 				<th>End</th>
 				<th></th>
 			</tr>
-			<tr>
-				<td class="textleft trance"></td> <td></td> <td>female</td> <td></td> <td></td> <td class="textleft">1 本目と同じ人。</td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td class="textleft trance"></td> <td></td> <td>female</td> <td></td> <td></td> <td class="textleft">1 本目と同じ人。</td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 		</tbody>
 		</table>
 	</div>
