--- a/1994062601.html
+++ b/1994062601.html
@@ -196,18 +196,17 @@
 				<th>End</th>
 				<th></th>
 			</tr>
-			<tr>
-				<td class="textleft"></td> <td></td> <td></td> <td></td> <td></td> <td class="textleft">当時の常連さんたち。どなたが参加されていたかは失念。</td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td class="textleft"></td> <td></td> <td></td> <td></td> <td></td> <td class="textleft">当時の常連さんたち。どなたが参加されていたかは失念。</td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 		</tbody>
 		</table>
 	</div>
