--- a/template.html
+++ b/template.html
@@ -193,18 +193,17 @@
 				<th>End</th>
 				<th></th>
 			</tr>
-			<tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr> <td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 		</tbody>
 		</table>
 	</div>
