--- a/1993082901.html
+++ b/1993082901.html
@@ -195,18 +195,17 @@
 				<th>End</th>
 				<th></th>
 			</tr>
-			<tr>
-				<td class="textleft trance"></td> <td></td> <td>female</td> <td></td> <td></td> <td class="textleft"></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
-				<td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td class="textleft trance"></td> <td></td> <td>female</td> <td></td> <td></td> <td class="textleft"></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
+			<tr><td>&nbsp;</td> <td></td> <td></td> <td></td> <td></td> <td></td> </tr>
 		</tbody>
 		</table>
 	</div>
