ちょっと修正:

--- a/1994062601.html
+++ b/1994062601.html
@@ -218,6 +218,7 @@
 		<p>その後、師匠は、ぼんてん倶楽部 (現串本ダイビング事業組合) で新ポイントを共有。ぼんてん倶楽部で新ポイント名として、より対外的にわかりやすい、双島沖 1 の根と命名される。</p>
 		<p>ぼくがササの根に初めて入るのが、このときになる。師匠は 2 度目。師匠も 1 度目はさらっと眺めただけなので (ダイビングの帰りだったので)、本格的なポイント調査は、このときが初めてとなる。AI Candidate だった準スタッフのぼくを含めて、全スタッフが入るのは、この日が初めて。</p>
 		<p>エントリーしてすぐ見えたのが北アルプスの岩稜のような風景。おぉ、っとレギュを咥えたまま声がでた。魚影も濃かった。このときは OPEN WATER II とファンのお客さんも一緒に入っている。一緒に入ったゲストの評判も好評だった。</p>
+		<p>流れもあまりなく、水深も、そこそことれることから (この日は -23.7m までしか降りなかったけど)、うちの店でのアドバンスのディープ講習のための定番ダイビング・ポイントとなる。</p>
 		<p>ただ後日、この双島沖 1 の根に入った、アドバンス受講生のゲストにちょっとしたトラブルが起きることになる。だけれども、そのことは、またその日のログに書こうと思う。安全に関わるようなものではないので、公開しても問題ないと思う。思い出すと今でも申し訳無さで胸がキュッとなってしまう出来事だった。</p>
 	</div>
 	<footer>
