1992/06/07 (Sun) Dive No: 38 静岡県沼津市 大瀬崎 一本松

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 		<dt>1990</dt>
 		<dt>1991</dt>
 		<dt>1992</dt>
+		<dd>
+			<ul>
+			<li><a href="1992060701.html">#38 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
+			</ul>
+		</dd>
 		<dt>1993</dt>
 		<dd>
 			<ul>
