強い口調を修正

--- a/1992060701.html
+++ b/1992060701.html
@@ -223,8 +223,7 @@
 		<p>彼がバディに浮上することを伝えてないこともわけがわからなかったし、彼のバディが彼がいなくなっていることに一切無頓着でダイビングを楽しみ続けていて、バディでもなんでもないぼくが彼がいないことに最初に気がつくとかわけがわからなかった。</p>
 		<p>とにかく彼が無事であることがわかったので、あわててエントリーポイントまで走る。数分待つとガイド氏が憔悴した表情でエグジットしてくる。大きな声で荷物のところにいたよ！！と伝える。そのときのガイド氏の安堵した表情が忘れられない。</p>
 		<p>その後、雲見で似たような経験をすることになる。大瀬崎と雲見の経験で、ぼくはカードを取ってからショップツアーに一度も参加せずに、スキルや判断力を磨くこともなく個人で好きに潜りに行く人間を一切信じなくなる。</p>
-		<p>100 本潜っていると言っていて実際にログにも 100 本のダイビングが記録されていても、一切信じなくなった。10 本程度の経験しか無いとみなすようになった。同時にオープンしか持たずに経験を重ねればベテランになれると、平気で言いふらす人も一切信用しなくなった。</p>
-		<p>死んだらどうする！！</p>
+		<p>100 本潜っていると言っていて実際にログにも 100 本のダイビングが記録されていても、一切信じなくなった。同時にオープンしか持たずに経験を重ねればベテランになれると、平気で言いふらす人も一切信用しなくなった。安全に潜れるダイバーになるまでに、事故を起こして死んでしまったらどうするんだろう。</p>
 	</div>
 	<footer>
 		<hr />
