もうちょっと修正

--- a/1992060701.html
+++ b/1992060701.html
@@ -222,8 +222,8 @@
 		<p>もどると、そこに行方不明になっていた彼がぐったりしたように座り込んでいる。ダイビング中に気分が悪くなって、あわてて 1 人で浮上して、1 人でさっさとエグジットして荷物のところまで戻って休んでいたらしい。</p>
 		<p>彼がバディに浮上することを伝えてないこともわけがわからなかったし、彼のバディが彼がいなくなっていることに一切無頓着でダイビングを楽しみ続けていて、バディでもなんでもないぼくが彼がいないことに最初に気がつくとかわけがわからなかった。</p>
 		<p>とにかく彼が無事であることがわかったので、あわててエントリーポイントまで走る。数分待つとガイド氏が憔悴した表情でエグジットしてくる。大きな声で荷物のところにいたよ！！と伝える。そのときのガイド氏の安堵した表情が忘れられない。</p>
-		<p>その後、雲見で似たような経験をすることになる。大瀬崎と雲見の経験で、ぼくはカードを取ってからショップツアーに一度も参加せずに、スキルや判断力を磨くこともなく個人で好きに潜りに行く人間を一切信じなくなる。</p>
-		<p>100 本潜っていると言っていて実際にログにも 100 本のダイビングが記録されていても、一切信じなくなった。同時にオープンしか持たずに経験を重ねればベテランになれると、平気で言いふらす人も一切信用しなくなった。安全に潜れるダイバーになるまでに、事故を起こして死んでしまったらどうするんだろう。</p>
+		<p>その後、雲見で似たような経験をすることになる。大瀬崎と雲見の経験で、ぼくはカードを取ってからショップツアーに一度も参加せずに、スキルや判断力を磨くこともなく個人で好きに潜りに行く人間を一切信じなくなる。100 本潜っていると言っていて、実際にログにも 100 本のダイビングが記録されていても、一切信じなくなった。結局一緒に潜ってみないと、その人が大丈夫なダイバーか絶対にわからない、そう思うようになった。</p>
+		<p>同時にオープンしか持たずに経験さえ重ねればベテランになれると、平気で言いふらす人も一切信用しなくなった。そもそもそんなことが誰でもできると、呑気に信じること自体がかなり危険だ。現実は悲しいことにそうではない。オープンで学んだことすら守れない人が大半だということを無視している。安全に潜れるダイバーになるまでに、事故を起こして死んでしまったらどうするんだろう。</p>
 	</div>
 	<footer>
 		<hr />
