1994/07/31 (Sun) 和歌山県串本町 ササの根(現在名双島沖 1 の根)、イスズミ礁

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
 		<dt>1994</dt>
 		<dd>
 			<ul>
-			<li><a href="1994062601.html">#71 1994/08/29 和歌山県串本町 双島沖 1 の根</a></li>
-			<li><a href="1994062602.html">#72 1994/08/29 和歌山県串本町 塔の沖</a></li>
+			<li><a href="1994062601.html">#71 1994/06/26 和歌山県串本町 双島沖 1 の根</a></li>
+			<li><a href="1994062602.html">#72 1994/06/26 和歌山県串本町 塔の沖</a></li>
+			<li><a href="1994073101.html">#86 1994/07/31 和歌山県串本町 双島沖 1 の根</a></li>
+			<li><a href="1994073102.html">#87 1994/07/31 和歌山県串本町 イスズミ礁</a></li>
 			</ul>
 		</dd>
 		<dt>1995</dt>
