--- a/1994073101.html
+++ b/1994073101.html
@@ -214,7 +214,7 @@
 	<div id="notes">
 		<p><b>Notes:</b></p>
 		<p>この日、ぼくはアシスタント・インストラクター・コースでの参加、つまりアシスタント・インストラクター候補生としての参加なので、実際のログブックのインストラクター・サインは、ぼくの指導インストラクターである師匠の名前になっている。</p>
-		<p>だけれども、この週末の現地でのアドバンスの担当は師匠ではなく、BSAC インストラクターのチーフと、NAU アシスタント・インストラクター候補生のぼくの 2 人になる。師匠はあくまでぼくの評価を担当。</p>
+		<p>だけれども、この週末の現地でのアドバンスの担当は師匠ではなく、BSAC インストラクターのチーフと、NAUI アシスタント・インストラクター候補生のぼくの 2 人になる。師匠はあくまでぼくの評価を担当。</p>
 		<p>この日はアドバンスの海洋の 2 日目。アドバンスのディープの講習を実施。アドバンスのディープということで、水深 -30m を取れる双島沖ササの根 (双島沖 1 の根) をチョイス。出港前の早朝、船長にあらかじめ目的地にササの根を依頼。</p>
 		<p>なおぼくが師匠の元でいろいろ学んだり、仕事のお手伝いをさせていただいていた間、双島沖ササの根はまだ双島沖ササの根と呼ばれていて双島沖 1 の根とは呼ばれてはいなかった。なのでぼくのログでは、双島沖 1 の根は、馴染みのある双島沖ササの根と呼ばせていただくことにする。これを読んでるみさんは、心の中でササの根は双島沖 1 の根、ササの根は双島沖 1 の根と唱えながら読んでいただきたい。</p>
 		<p>今日のゲストは表の通り。非常に申し訳ないことに T さんと S さんがどんな人だったのか、さっぱり思い出せない。性別さえ記憶してないので、おそらくアドバンスを受講されたあと、店に来なかった人たちだと思われる。ぼくたちの力が足りなかったのか、他のショップに移られたのか、それとも自立心旺盛で早くも自立したダイバーの道を歩まれ始めたのか、理由は定かではない。なにせお店に来られないのでさっぱりわからない。でもうちでアドバンスまで受けたのなら、おそらくご本人とバディは安全に潜れるるはずであり (それだけのことをやっていただいてる)、他店であろうとその先に進まれるであろうし、あまり危惧はしていなかった。</p>
