--- a/1994073102.html
+++ b/1994073102.html
@@ -219,10 +219,12 @@
 		<p>だけど袋港で問題が勃発する。</p>
 		<p>今日 1 本目のササの根を問題なく潜っていたと思っていた M さんが車から出てきてない。そのことに気がついたのが、ボートに機材とタンクを積み込んでいるときだった。</p>
 		<p>どうしたのかな？と思って車にもどる。</p>
-		<p>M さんは、車の後部座席に 1 人座って泣いていた。</p>
+		<p>M さんは、車の後部座席に座って、1 人泣いていた。</p>
 		<p>どうしたらいいのか、どう声をかけたらいいのかわからなかった。ただわかったのは、声をかけるのは男のぼくより、女性のチーフが声をかけたほうがいいということだった。</p>
-		<p>ぼくはチーフのところに言って「泣いてるので声をかけてあげて」と頼んだ。チーフがぼくと交代で車にすっとんでいったんだけど、しばらくしてもどってきたチーフの話では、実は F さんだけでなく M さんも実はすごく怖かったとのことだった。</p>
-		<p>その話を聞いた途端、胸がギュッと締め付けられるような気がした。ぜんぜんわかってあげれてなかった。普通に潜っているように見えていたので、M さんがそんなに怖かったなんて、ぜんぜん気づいてあげれなかった。</p>
+		<p>ぼくはチーフのところに行って「M さんが車のなかで泣いてるので、声をかけてあげて」と頼んだ。</p>
+		<p class="no-indent">「なんで！？」とチーフがぼくと交代で車にすっとんでいって、しばらくしてもどってきた。</p>
+		<p class="no-indent">「そんな素振りはぜんぜんなかったけど、(ササの根が) すごく怖かったって」とチーフ。</p>
+		<p>その話を聞いた途端、胸がギュッと締め付けられるような気がした。ぜんぜんわかってあげれてなかった。普通に潜っているように見えていたので、M さんがそんなに怖かったなんて、ぜんぜん気づいてあげれてなかった。</p>
 		<p>よくよく考えたら 1 本目が終えてからも、いつも笑顔が絶えない M さんに笑顔がなかった。彼女も船に弱いので、船酔いで気分が優れないのかも、と安易に考えていた自分を悔いた。結局、その日、M さんは 2 本目のイスズミ礁のような易しいポイントでのボートダイビングをスキップすることになってしまった。</p>
 		<p>ぼくたちのせいだ。</p>
 		<p>このときのことを思い出すと、今でも胸がギュッとなってしまう。救いは、彼女がこれまで通り、ぼくたちのダイビング・ツアーに参加してくれて、ササの根だけでなく、その他の外洋ポイントにも一緒に潜れるようになったことだ。</p>
