Dive #16 1987/10/11 和歌山県串本町 住崎 ボートダイブ

--- a/index.html
+++ b/index.html
@@ -73,7 +73,29 @@
 			<li>#3 1987/07/12 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (3)</li>
 			<li>#4 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (4)</li>
 			<li>#5 1987/07/25 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (5)</li>
-			<li><a href="1987072601.html">#6 1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ</a></li>
+			<li><a href="1987/1987072601.html">#6 1987/07/26 和歌山県白浜町 円月島 NAUI OPENWATER 1 講習 (6) チェックダイブ</a></li>
+
+			<li>#7 1987/08/13 和歌山県和歌山市 東亜燃料西</li>
+			<li>#8 1987/08/14 和歌山県串本町 田子の浦</li>
+			<li>#9 1987/08/14 和歌山県串本町 田子の浦</li>
+			<li>#10 1987/08/14 和歌山県串本町 住崎</li>
+
+			<li>#11 1987/09/26 和歌山県白浜町 円月島</li>
+			<li>#12 1987/09/27 和歌山県白浜町 梶原島</li>
+			<li>#13 1987/09/27 和歌山県白浜町 梶原島</li>
+
+			<li>#14 1987/10/10 和歌山県串本町 東目</li>
+			<li>#15 1987/10/11 和歌山県串本町 住崎</li>
+			<li><a href="1987/1987101102.html">#16 1987/10/11 和歌山県串本町 住崎</a></li>
+
+			<li>#17 1987/05/02 和歌山県白浜町 梶原島</li>
+			<li>#18 1987/05/03 和歌山県白浜町 円月島</li>
+			<li>#19 1987/05/03 和歌山県白浜町 円月島</li>
+			<li>#20 1987/06/04 福井県敦賀半島 手の浦 (沈船)</li>
+
+			<li>#21 1987/06/26 京都府久美浜町 トウグリ</li>
+			<li>#22 1987/06/26 京都府久美浜町 トウグリ</li>
+			<li>#</li>
 			</ul>
 		</dd>
 		<dt>1988</dt>
@@ -83,23 +105,23 @@
 		<dt>1992</dt>
 		<dd>
 			<ul>
-			<li><a href="1992060701.html">#38 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
+			<li><a href="1992/1992060701.html">#38 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
 			</ul>
 		</dd>
 		<dt>1993</dt>
 		<dd>
 			<ul>
-			<li><a href="1993082901.html">#49 1993/08/29 和歌山県古座町 上瀬沖の根</a></li>
-			<li><a href="1993082902.html">#50 1993/08/29 和歌山県白浜町 上瀬内の根</a></li>
+			<li><a href="1993/1993082901.html">#49 1993/08/29 和歌山県古座町 上瀬沖の根</a></li>
+			<li><a href="1993/1993082902.html">#50 1993/08/29 和歌山県白浜町 上瀬内の根</a></li>
 			</ul>
 		</dd>
 		<dt>1994</dt>
 		<dd>
 			<ul>
-			<li><a href="1994062601.html">#71 1994/06/26 和歌山県串本町 双島沖 1 の根</a></li>
-			<li><a href="1994062602.html">#72 1994/06/26 和歌山県串本町 塔の沖</a></li>
-			<li><a href="1994073101.html">#86 1994/07/31 和歌山県串本町 双島沖 1 の根</a></li>
-			<li><a href="1994073102.html">#87 1994/07/31 和歌山県串本町 イスズミ礁</a></li>
+			<li><a href="1994/1994062601.html">#71 1994/06/26 和歌山県串本町 双島沖 1 の根</a></li>
+			<li><a href="1994/1994062602.html">#72 1994/06/26 和歌山県串本町 塔の沖</a></li>
+			<li><a href="1994/1994073101.html">#86 1994/07/31 和歌山県串本町 双島沖 1 の根</a></li>
+			<li><a href="1994/1994073102.html">#87 1994/07/31 和歌山県串本町 イスズミ礁</a></li>
 			</ul>
 		</dd>
 		<dt>1995</dt>
