#21 1988/06/26 京都府久美浜町 トウグリ

--- a/index.html
+++ b/index.html
@@ -87,18 +87,20 @@
 			<li>#14 1987/10/10 和歌山県串本町 東目</li>
 			<li>#15 1987/10/11 和歌山県串本町 住崎</li>
 			<li><a href="1987/1987101102.html">#16 1987/10/11 和歌山県串本町 住崎</a></li>
-
-			<li>#17 1987/05/02 和歌山県白浜町 梶原島</li>
-			<li>#18 1987/05/03 和歌山県白浜町 円月島</li>
-			<li>#19 1987/05/03 和歌山県白浜町 円月島</li>
-			<li>#20 1987/06/04 福井県敦賀半島 手の浦 (沈船)</li>
-
-			<li>#21 1987/06/26 京都府久美浜町 トウグリ</li>
-			<li>#22 1987/06/26 京都府久美浜町 トウグリ</li>
-			<li>#</li>
 			</ul>
 		</dd>
 		<dt>1988</dt>
+		<dd>
+			<ul>
+			<li>#17 1988/05/02 和歌山県白浜町 梶原島</li>
+			<li>#18 1988/05/03 和歌山県白浜町 円月島</li>
+			<li>#19 1988/05/03 和歌山県白浜町 円月島</li>
+			<li>#20 1988/06/04 福井県敦賀半島 手の浦 (沈船)</li>
+
+			<li><a href="1988/1988062601.html">#21 1988/06/26 京都府久美浜町 トウグリ</a></li>
+			<li>#22 1988/06/26 京都府久美浜町 トウグリ</li>
+			<ul>
+		</dd>
 		<dt>1989</dt>
 		<dt>1990</dt>
 		<dt>1991</dt>
