--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 			<li>#37 1992/05/10 静岡県沼津市 一本松</li>
 			<li><a href="1992/1992060701.html">#38 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
 			<li>#39 1992/06/07 静岡県沼津市 先端
-			<li>#40 1992/07/12 静岡県松崎町雲見 赤井浜
-			<li>#41 1992/07/12 静岡県松崎町雲見 赤井浜
+			<li><a href="1992/1992071201.html">#40 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
+			<li>#41 1992/07/12 静岡県松崎町 雲見 赤井浜
 			<li>#42 1992/08/08 福井県越前町 軍艦岩
 			<li>#43 1992/08/08 福井県越前町 玉川観音前
 			<li>#44 1992/12/05 和歌山県白浜町 梶原島
