1987/10/10-11 串本ファンダイブとデータ修正。

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 			<li>#12 1987/09/27 和歌山県白浜町 梶原島</li>
 			<li>#13 1987/09/27 和歌山県白浜町 梶原島</li>
 
-			<li>#14 1987/10/10 和歌山県串本町 東目</li>
-			<li>#15 1987/10/11 和歌山県串本町 住崎</li>
+			<li><a href="1987/1987101001.html">#14 1987/10/10 和歌山県串本町 東目</a></li>
+			<li><a href="1987/1987101101.html">#15 1987/10/11 和歌山県串本町 住崎</a></li>
 			<li><a href="1987/1987101102.html">#16 1987/10/11 和歌山県串本町 住崎</a></li>
 			</ul>
 		</dd>
@@ -142,7 +142,7 @@
 			<li><a href="1992/1992060701.html">#38 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
 			<li>#39 1992/06/07 静岡県沼津市 先端
 			<li><a href="1992/1992071201.html">#40 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
-			<li>#41 1992/07/12 静岡県松崎町 雲見 赤井浜
+			<li><a href="1992/1992071202.html">#41 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
 			<li>#42 1992/08/08 福井県越前町 軍艦岩
 			<li>#43 1992/08/08 福井県越前町 玉川観音前
 			<li>#44 1992/12/05 和歌山県白浜町 梶原島
