--- a/index.html
+++ b/index.html
@@ -124,47 +124,56 @@
 			<li>#33 1990/09/09 福島県越前町 玄達瀬</li>
 			<li>#34 1990/09/09 福島県越前町 玄達瀬</li>
 			<li>#30 1990/09/27 和歌山県白浜町 中島赤ブイ</li>
-			<li>#31 1990/09/28 和歌山県白浜町 塔島,</li>
+			<li>#31 1990/09/28 和歌山県白浜町 塔島</li>
+			<li>#32 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
+			<li>#33 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
+			<li>#34 1990/10/04 和歌山県白浜町 円月島 Rescue Techniques 講習</li>
 			</ul>
 		</dd>
 		<dt>1991</dt>
 		<dd>
 			<ul>
-			<li>#32 1991/01/05 和歌山県白浜町 臨海</li>
-			<li>#33 1991/01/05 和歌山県白浜町 沖ノ島</li>
+			<li>#35 1991/01/05 和歌山県白浜町 臨海</li>
+			<li>#36 1991/01/05 和歌山県白浜町 沖ノ島</li>
 			</ul>
 		</dd>
 		<dt>1992</dt>
 		<dd>
 			<ul>
-			<li>#34 1992/05/09 静岡県沼津市 大瀬崎先端</li>
-			<li>#35 1992/05/09 静岡県沼津市 湾内</li>
-			<li>#36 1992/05/10 静岡県沼津市 柵下 天狗の棚</li>
-			<li>#37 1992/05/10 静岡県沼津市 一本松</li>
-			<li><a href="1992/1992060701.html">#38 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
-			<li><a href="1992/1992060702.html">#39 1992/06/07 静岡県沼津市 大瀬崎 先端</a></li>
-			<li><a href="1992/1992071201.html">#40 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
-			<li><a href="1992/1992071202.html">#41 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
-			<li>#42 1992/08/08 福井県越前町 軍艦岩
-			<li>#43 1992/08/08 福井県越前町 玉川観音前
-			<li>#44 1992/12/05 和歌山県白浜町 梶原島
-			<li>#45 1992/12/05 和歌山県白浜町 円月島
+			<li>#37 1992/05/09 静岡県沼津市 大瀬崎先端</li>
+			<li>#38 1992/05/09 静岡県沼津市 湾内</li>
+			<li>#39 1992/05/10 静岡県沼津市 柵下 天狗の棚</li>
+			<li>#40 1992/05/10 静岡県沼津市 一本松</li>
+			<li><a href="1992/1992060701.html">#41 1992/06/07 静岡県沼津市 大瀬崎 一本松</a></li>
+			<li><a href="1992/1992060702.html">#42 1992/06/07 静岡県沼津市 大瀬崎 先端</a></li>
+			<li><a href="1992/1992071201.html">#43 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
+			<li><a href="1992/1992071202.html">#44 1992/07/12 静岡県松崎町 雲見 赤井浜</a></li>
+			<li>#45 1992/08/08 福井県越前町 軍艦岩
+			<li>#46 1992/08/08 福井県越前町 玉川観音前
+			<li>#47 1992/12/05 和歌山県白浜町 梶原島
+			<li>#48 1992/12/05 和歌山県白浜町 円月島
 			</ul>
 		</dd>
 		<dt>1993</dt>
 		<dd>
 			<ul>
-			<li>#46 1993/07/19 福井県越前町 軍艦岩</li>
-			<li>#47 1993/07/19 福井県越前町 カレイ崎荘前</li>
-			<li>#48 1993/08/28 和歌山県串本町 オレンジハウス前</li>
-			<li><a href="1993/1993082901.html">#49 1993/08/29 和歌山県古座町 上瀬沖の根</a></li>
-			<li><a href="1993/1993082902.html">#50 1993/08/29 和歌山県白浜町 上瀬内の根</a></li>
-			<li>#51 1993/09/15 和歌山県由良町 白崎立厳</li>
-			<li>#52 1993/09/15 和歌山県由良町 白崎立厳</li>
-			<li>#53 1993/10/11 和歌山県白浜町 エド瀬</li>
-			<li>#54 1993/10/11 和歌山県白浜町 シモサイ</li>
-			<li>#55 1993/11/03 和歌山県白浜町 円月島</li>
-			<li>#56 1993/11/03 和歌山県白浜町 円月島</li>
+			<li>#49 1993/07/19 福井県越前町 軍艦岩</li>
+			<li>#50 1993/07/19 福井県越前町 カレイ崎荘前</li>
+			<li>#51 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#52 1993/08/26 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#53 1993/08/27 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#54 1993/08/27 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#55 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li>#56 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li><a href="1993/1993082803.html">#57 1993/08/28 和歌山県串本町 オレンジハウス前 Advanced 講習</a></li>
+			<li><a href="1993/1993082901.html">#58 1993/08/29 和歌山県古座町 上瀬沖の根 Advanced 講習</a></li>
+			<li><a href="1993/1993082902.html">#59 1993/08/29 和歌山県白浜町 上瀬内の根 Advanced 講習</a></li>
+			<li>#60 1993/09/15 和歌山県由良町 白崎立厳</li>
+			<li>#61 1993/09/15 和歌山県由良町 白崎立厳</li>
+			<li>#62 1993/10/11 和歌山県白浜町 エド瀬</li>
+			<li>#63 1993/10/11 和歌山県白浜町 シモサイ</li>
+			<li>#64 1993/11/03 和歌山県白浜町 円月島</li>
+			<li>#65 1993/11/03 和歌山県白浜町 円月島</li>
 			</ul>
 		</dd>
 		<dt>1994</dt>
