Dive #153 1998/06/02 和歌山県南部町 ショウガセ

--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
 		<dt>1996</dt>
 		<dt>1997</dt>
 		<dt>1998</dt>
+		<dd>
+			<ul>
+			<li><a href="1998/1998060201.html">#153 1998/06/02 和歌山県南部町 ショウガセ</a></li>
+			</ul>
+		</dd>
 		<dt>1999</dt>
 		<dt>2000</dt>
 		<dt>2001</dt>
